[gd_scene load_steps=5 format=3 uid="uid://b3y3rf3e2dyt4"]

[ext_resource type="Script" uid="uid://blos8e0uuxvlj" path="res://src/GUI/ready_splash.gd" id="1_g37op"]
[ext_resource type="Texture2D" uid="uid://deent048t5wau" path="res://res/sprites/ready.png" id="2_oqcvl"]
[ext_resource type="Texture2D" uid="uid://d235es3e48ih3" path="res://res/sprites/ready_loadbar.png" id="3_w7458"]
[ext_resource type="AudioStream" uid="uid://ddvy0qom2cdla" path="res://res/audio/ready.wav" id="4_oqcvl"]

[node name="ReadySplash" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_g37op")

[node name="ReadySprite" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 368.0
offset_top = 238.0
offset_right = 744.0
offset_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_oqcvl")

[node name="Mask" type="Polygon2D" parent="."]
clip_children = 1
polygon = PackedVector2Array(397, 374, 671, 374, 671, 376, 670, 376, 670, 378, 669, 378, 669, 380, 668, 380, 668, 382, 667, 382, 667, 383, 393, 383, 393, 382, 394, 382, 394, 380, 395, 380, 395, 378, 396, 378, 396, 376, 397, 376)

[node name="ReadyLoadBar" type="TextureRect" parent="Mask"]
texture_filter = 1
offset_left = 393.0
offset_top = 374.0
offset_right = 671.0
offset_bottom = 383.0
mouse_filter = 2
texture = ExtResource("3_w7458")
expand_mode = 1
stretch_mode = 1

[node name="ReadyAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_oqcvl")
